[package]
name = "cw-rewarddistrubutor"
version = "0.1.1"
authors = ["Deniz <deniz@deuslabs.fi>"]
edition = "2018"
description= "native token reward distribution smart contract based on stake"
license = "MIT OR Apache-2.0"
repository = "https://github.com/CosmWasm/cw-tokens/contracts/cw20-reward"
exclude = [
  "contract.wasm",
  "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cw0 = "0.10"
cosmwasm-schema = "1.1.5"
cw20 = "0.11"
cosmwasm-std = "1.1.5"
cw-storage-plus = "0.16.0"
cw-controllers = "0.16.0"
cw-utils = "0.16.0"
cw-multi-test = "0.16.0"
schemars = "0.8.11"
serde = { version = "1.0.147", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.37" }
